# COMPASS

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: build_docs.yaml  test_docs.yaml
COMPASS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_sources/: index.rst.txt
_sources/design_principles/: design_process.rst.txt  required_software.rst.txt
_sources/future/: index.rst.txt
_sources/hardware/: lasers.rst.txt  room_preparation.rst.txt  table.rst.txt
_sources/imaging/: imaging.rst.txt
_sources/introduction/: nanospim.rst.txt  principles.rst.txt
_sources/physical_assembly/: physical_assembly.rst.txt  table.rst.txt
_sources/system_characterization/: system_characterization.rst.txt
_templates/: custom_class.html  custom_module.html
design_principles/: design_process.html  required_software.html
docs/: live.py
docs/source/: conf.py  index.rst
docs/source/Monolithic_FilesForWebsite/: AngleMount.ipt  AngleMount.stl  Clamp2_threaded.ipt  Clamp2_threaded.stp  Deskewing_1Channel_Compass.ipynb  DovetailSampleHolderToKB1X1TMagneticHolder.ipt  DovetailSampleHolderToKB1X1TMagneticHolder_2.stl  DovetailSampleScan_AdjustedforPiezoConceptHS1_IncreasedHoles0p05mm_IncreasedMountingholesfor832screws.ipt  OptimizedDesign_Baseplate.ipt  OptimizedDesign_Baseplate.stl  OptimizedDesign_Tolerance_Coarse.CFG  OptimizedDesign_Tolerance_Coarse.zos  OptimizedDesign_Tolerance_Coarse_WORST.zos  OptimizedDesign_Tolerance_Fine_WORST.zos
docs/source/_templates/: custom_module.rst
docs/source/design_principles/: design_process.rst  required_software.rst
docs/source/future/: index.rst
docs/source/hardware/: computer.rst  index.rst  lasers.rst  room_preparation.rst  table.rst
docs/source/imaging/: CutSections.txt  imaging.rst
docs/source/introduction/: aslm.rst  background.rst  introduction.rst  nanospim.rst  opm.rst
docs/source/physical_assembly/: physical_assembly.rst  room_preparation.rst
docs/source/system_characterization/: system_characterization.rst
downloads/base/cad/: COMPASS_Baseplate_base.ipt  COMPASS_Baseplate_base.stl
downloads/base/zemax/: OptimizedDesign_Tolerance_Coarse_BEST.zos  OptimizedDesign_Tolerance_Fine.zos  OptimizedDesign_Tolerance_Fine_BEST.zos
downloads/common/cad/: AngleMount.stp  GalvoHoldertoPolarisMount.ipt  GalvoHoldertoPolarisMount.stl  GalvoHoldertoPolarisMount.stp  IDA12toPolarisAdapter.ipt  IDA12toPolarisAdapter.stl  IDA12toPolarisAdapter.stp  RSP1toPolarisPinAdapter.ipt  SampleChamber.ipt  (+15 more)
future/: aslm.html  index.html  opm.html
hardware/: computer.html  index.html  lasers.html  room_preparation.html  table.html
imaging/: imaging.html
introduction/: aslm.html  background.html  introduction.html  nanospim.html  opm.html  principles.html
physical_assembly/: physical_assembly.html  room_preparation.html  table.html
system_characterization/: system_characterization.html
tests/: test_docs.py
(+3 files in other folders)
