[build-system]
requires = ["setuptools>=43.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navigate-hardware"
description = "Open source light-sheet fluorescence microscopy."
authors = [{name = "The Dean Lab, UT Southwestern Medical Center"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
]

requires-python = ">=3.9.7"
dependencies = []
[project.optional-dependencies]

docs = [
    "numpydoc",
    "nbconvert",
    "sphinx<6.0.0",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
    "sphinx-toolbox"
]

[project.urls]
Source = "https://github.com/TheDeanLab/navigate-hardware"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
