[build-system]
requires = ["setuptools>=43.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "COMPASS"
description = "Cost-Effective, Open-Source, Light-Sheet Microscopy Solutions."
authors = [{name = "The Dean Lab, UT Southwestern Medical Center"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
]

requires-python = ">=3.9.7"
dependencies = []
[project.optional-dependencies]

docs = [
    "numpydoc",
    "nbconvert",
    "sphinx<6.0.0",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
    "sphinx-toolbox",
    "livereload"
]

[project.urls]
Source = "https://github.com/TheDeanLab/compass"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
